@@ -17,7 +17,7 @@ import org.bukkit.command.CommandSender;
 import org.bukkit.entity.Player;
 import org.jetbrains.annotations.NotNull;
 
-import java.util.List;
+import java.util.Set;
 
 /**
  * This class handles everything for the transfer command
@@ -151,7 +151,7 @@ public class CommandTransfer extends Command {
                 return false;
             }
         }
-        final List<String> REG = CoordinateServerRegistry.getRegisteredServers();
+        final Set<String> REG = CoordinateServerRegistry.getRegisteredServers();
         int regSize = REG.size();
         if(regSize < 1) {
             sender.sendMessage(Component.text("No servers registered.", NamedTextColor.AQUA));
@@ -161,9 +161,12 @@ public class CommandTransfer extends Command {
         //Building the server list
         StringBuilder builder = new StringBuilder();
         builder.append("Servers:");
-        for(int i = 0; i < regSize; i++) {
-            builder.append("\n").append(REG.get(i));
+        for(String server : REG) {
+            builder.append("\n").append(server);
         }
+        /*for(int i = 0; i < regSize; i++) {
+            builder.append("\n").append(REG.);
+        }*/
         sender.sendMessage(Component.text(builder.toString(), NamedTextColor.AQUA));
         return true;
     }
@@ -307,7 +310,7 @@ public class CommandTransfer extends Command {
                 sender.sendMessage(Component.text("Coordinates must be whole numbers!", NamedTextColor.RED));
                 return false;
             }
-            ResourceOptions.spawnLocation = new Location(TransferClient.getPlugin().getServer().getWorlds().get(0), x, y, z);
+            ResourceOptions.spawnLocation = new Location(TransferClient.getPlugin().getServer().getWorlds().getFirst(), x, y, z);
             config.saveResources(true, false);
             sender.sendMessage(Component.text("Spawn-point set.", NamedTextColor.AQUA));
             return true;
